--- a/Server/package.json
+++ b/Server/package.json
@@ -2,7 +2,7 @@
   "name": "wdcapi",
   "version": "1.0.0",
   "description": "GetTILResultsForFantasyLeague",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon ./api/index.js",
     "start": "nodemon ./api/index.js"
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0"
   },
   "repository": {
     "type": "git",
